functional test init